<resources>
    <string name="topCenterTextMessage">Place the tag under the phone</string>
    <string name="warn_key_download">Do NOT load keys from Download folder.</string>
    <string name="fixed_key_found">&#171;locked-secret&#187; stored / loaded.</string>
    <string name="fixed_key_missing">&#171;locked-secret&#187; missing!</string>
    <string name="unfixed_key_found">&#171;unfixed-info&#187; stored / loaded.</string>
    <string name="unfixed_key_missing">&#171;unfixed-info&#187; missing!</string>
    <string name="nfc_unsupported">NFC support was not found!</string>
    <string name="nfc_disabled">NFC is currently disabled!</string>
    <string name="nfc_available">NFC is currently disabled. Enable NFC?</string>
    <string name="no_decrypt_key">Decryption keys not imported</string>
    <string name="filter">amiibo Filters</string>
    <string name="sorting">Sorting Options</string>
    <string name="display_options">Display Options</string>
    <string name="amiibo_id">ID</string>
    <string name="amiibo_name">Name</string>
    <string name="amiibo_titles">Game Usage</string>
    <string name="amiibo_game">Game Series</string>
    <string name="amiibo_character">Character</string>
    <string name="amiibo_series">amiibo Series</string>
    <string name="amiibo_type">amiibo Type</string>
    <string name="amiibo_path">File Path</string>
    <string name="pref_amiibo_characters">Characters</string>
    <string name="pref_amiibo_types">Amiibo Types</string>
    <string name="pref_amiibo_titles">Enabled Games</string>
    <string name="amiibo_name_caps">NAME</string>
    <string name="amiibo_id_caps">TAGID</string>
    <string name="amiibo_type_caps">AMIIBO TYPE</string>
    <string name="amiibo_titles_caps">GAME USAGE</string>
    <string name="amiibo_game_caps">GAME SERIES</string>
    <string name="amiibo_series_caps">AMIIBO SERIES</string>
    <string name="amiibo_character_caps">CHARACTER</string>
    <string name="amiibo_path_caps">PATH</string>
    <string name="recursive_folders">Recursive Search</string>
    <string name="compact">Snappy Cards</string>
    <string name="large">Banner Cards</string>
    <string name="image">Icon Tile Grid</string>
    <string name="decryption_keys">Decryption Keys</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="close">Close</string>
    <string name="view">View</string>
    <string name="proceed">Continue</string>
    <string name="unlock">Unlock</string>
    <string name="scan">Scan</string>
    <string name="qr_code">QR Code</string>
    <string name="upload">GATT</string>
    <string name="browser">Browser</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="export">Export</string>
    <string name="cache">Cache</string>
    <string name="write">Write</string>
    <string name="erase">Erase</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="accept">Accept</string>
    <string name="submit">Submit</string>
    <string name="deny">Deny</string>
    <string name="start">Start</string>
    <string name="delete">Delete</string>
    <string name="activate">Activate</string>
    <string name="download">Download</string>
    <string name="parent">Parent</string>
    <string name="unknown">Unknown</string>
    <string name="invalid">Invalid</string>
    <string name="unspecified">Unspecified</string>
    <string name="install">Install</string>
    <string name="sync">Sync</string>
    <string name="enable">Enable</string>
    <string name="replace">Replace</string>
    <string name="update">Update</string>
    <string name="error_caps">ERROR</string>
    <string name="uid" translatable="false">UID</string>
    <string name="country_code">Country Code</string>
    <string name="init_date">Initialized Date</string>
    <string name="mod_date">Modified Date</string>
    <string name="nickname">Nickname</string>
    <string name="write_count">Write Count</string>
    <string name="mod_serial">Serial Number</string>
    <string name="view_hex">View Hex Code</string>
    <string name="hex_code">Hex Code</string>
    <string name="share_qr">Share QR Code</string>
    <string name="edit_props">Edit Properties</string>
    <string name="bin_random">Bin Randomizer</string>
    <string name="download_slot">Download Slot</string>
    <string name="share_export">Share / Export</string>
    <string name="copy_id">Copy ID</string>
    <string name="copy_amiibo_id">Copy amiibo ID</string>
    <string name="flipper">Flipper</string>
    <string name="flipper_save">Save as Flipper</string>
    <string name="delete_binary">Delete Tag File</string>
    <string name="ignore_tag_id">Ignore Tag ID #</string>
    <string name="skip_lock_info">Skip Lock Info</string>
    <string name="random_serial">Random Serial Number</string>
    <string name="inject_game_data">Inject Save Data</string>
    <string name="unlock_sparkle_cards">Unlock Sparkle Cards</string>
    <string name="export_app_data">Export</string>
    <string name="import_app_data">Import</string>
    <string name="format_app_data">Format</string>
    <string name="game_titles_view">View Compatible Games</string>
    <string name="game_titles_hide">Hide Compatible Games</string>
    <string name="export_flipper_files">Export as Flipper Files</string>
    <string name="games_ds">3DS Compatibility</string>
    <string name="games_wiiu">WiiU Compatibility</string>
    <string name="games_nx">Switch Compatibility</string>
    <string name="games_nx2">Switch 2 Compatibility</string>
    <string name="platform_3ds">3DS</string>
    <string name="platform_wiiu">Wii U</string>
    <string name="platform_switch">Switch</string>
    <string name="platform_switch2">Switch 2</string>
    <string name="no_games_ds">No 3DS compatibility</string>
    <string name="no_games_wiiu">No WiiU compatibility</string>
    <string name="no_games_nx">No Switch compatibility</string>
    <string name="no_games_nx2">No Switch 2 compatibility</string>
    <string name="properties">Properties</string>
    <string name="mii" translatable="false">Mii</string>
    <string name="mii_name">Mii Name</string>
    <string name="mii_author">Mii Author</string>
    <string name="app">Application</string>
    <string name="app_id">App ID</string>
    <string name="app_data">App Data</string>
    <string name="hearts">Hearts</string>
    <string name="level">Level</string>
    <string name="level_cpu">CPU Level</string>
    <string name="appearance">Appearance</string>
    <string name="gifts">Gifts</string>
    <string name="special_neutral">Special Neutral</string>
    <string name="special_side">Special Side</string>
    <string name="special_up">Special Up</string>
    <string name="special_down">Special Down</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="speed">Speed</string>
    <string name="bonus_one">Bonus Effect 1</string>
    <string name="bonus_two">Bonus Effect 2</string>
    <string name="bonus_three">Bonus Effect 2</string>
    <string name="report_problem">Report Problem</string>
    <string name="logcat_crash">ERROR! Submit a log?</string>
    <string name="send_donation">Send a Donation</string>
    <string name="settings_donate">Support TagMo with a donation</string>
    <string name="google_link">Donate with Google Play</string>
    <string name="sponsor_link">Sponsor on GitHub</string>
    <string name="paypal_link">Donate with PayPal</string>
    <string name="kofi_link">Support on Ko-fi</string>
    <string name="coffee_link">Buy me a coffee</string>
    <string name="cancel_link">Cancel Subscription</string>
    <string name="subscription_terms">By subscribing to monthly donations, a special banner will appear in settings for the duration of your subscription.\n\nYou may cancel your subscription at any time by using the button on this donation page or through Google Play.</string>
    <string name="wrote_file">%1$s saved!</string>
    <string name="wrote_foomiibo">%1$s Foomiibo saved!</string>
    <string name="delete_file">%1$s deleted!</string>
    <string name="delete_foomiibo">%1$s Foomiibo deleted!</string>
    <string name="nfc_tag">NFC tag</string>
    <string name="tag_detected">%1$s detected&#8230;</string>
    <string name="tag_scanning">%1$s scanning&#8230;</string>
    <string name="bank_writing">Writing bank %1$d of %2$d&#8230;</string>
    <string name="bank_erasing">Erasing bank %1$d of %2$d&#8230;</string>
    <string name="bank_select">Selecting a destination bank&#8230;</string>
    <string name="progress_percent">%1$d / %2$d (%3$d%%)</string>
    <string name="chibi_robo">Chibi-Robo! Zip Lash</string>
    <string name="zelda_twilight">The Legend of Zelda: Twilight Princess HD</string>
    <string name="mh_stories">Monster Hunter Stories</string>
    <string name="ml_paper_jam">Mario &#38; Luigi: Paper Jam</string>
    <string name="ml_superstar_saga">Mario &#38; Luigi: Superstar Saga</string>
    <string name="ms_superstars">Mario Sports Superstars</string>
    <string name="mario_party_ten">Mario Party 10</string>
    <string name="mario_tennis">Mario Tennis</string>
    <string name="pikmin">Pikmin</string>
    <string name="splatoon">Splatoon (1 &#38; 2)</string>
    <string name="splatoon_three">Splatoon 3</string>
    <string name="super_smash">Super Smash Bros. (Wii U / 3DS)</string>
    <string name="smash_ultimate">Super Smash Bros. Ultimate</string>
    <string name="unknown_type">Unverified Tag</string>
    <string name="write_raw">Write to Tag (Raw)</string>
    <string name="write_auto">Write to Tag (Auto)</string>
    <string name="update_tag">Update a Tag</string>
    <string name="scan_tag">Scan an NFC Tag</string>
    <string name="scan_tag_v3">Scan Air Rider</string>
    <string name="scan_data">Scan from Tag</string>
    <string name="gatt_share">Upload to GATT</string>
    <string name="lock_elite">Lock N2 Elite</string>
    <string name="unlock_elite">Unlock N2 Elite</string>
    <string name="scan_bank_no">Scan Bank %1$d</string>
    <string name="scan_bank">Scan Bank %1$s</string>
    <string name="scan_elite">Scan N2 Elite</string>
    <string name="erase_bank">Erase Bank Tag</string>
    <string name="activate_bank">Activate Bank</string>
    <string name="amiibo_backup">Create Backup</string>
    <string name="validate_data">Validate NTAG</string>
    <string name="set_bank_count">Set Bank Count</string>
    <string name="lock_amiibo">Lock N2 Elite</string>
    <string name="write_collection">Write Collection</string>
    <string name="erase_collection">Erase Collection</string>
    <string name="unlock_complete">N2 unlock complete!\nScan N2 to verify.</string>
    <string name="feature_unavailable">Feature not implemented!</string>
    <string name="activity_unavailable">Please try again later.</string>
    <string name="storage_unavailable">Device storage inaccessible!</string>
    <string name="guide_suggested">View the guide for more help</string>
    <string name="allow">Allow</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="qr_type">QR Format</string>
    <string name="qr_raw">QR Text</string>
    <string name="qr_bytes">QR Data</string>
    <string name="qr_mii">Mii Data</string>
    <string name="qr_amiibo">amiibo QR</string>
    <string name="qr_invalid">Input null or invalid</string>
    <string name="settings">Settings</string>
    <string name="guides">Guides</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="menu_amiibo">Backup Browser</string>
    <string name="menu_games">Game Compatibility</string>
    <string name="menu_foomiibo">Foomiibo Panel</string>
</resources>