<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".browser.BrowserActivity">
    <item
        android:id="@+id/mnu_scan"
        android:title="@string/scan"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mnu_write"
        android:title="@string/write"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mnu_save"
        android:title="@string/save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mnu_update"
        android:title="@string/update_tag"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mnu_edit"
        android:title="@string/edit_props"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_copier"
        android:title="@string/bin_copier"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_share_qr"
        android:title="@string/share_qr"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_view_hex"
        android:title="@string/view_hex"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_validate"
        android:title="@string/validate_data"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_delete"
        android:title="@string/delete_binary"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mnu_ignore_tag_id"
        android:checkable="true"
        android:title="@string/ignore_tag_id"
        app:showAsAction="never"/>
</menu>