<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/mnu_activate"
        android:title="@string/activate"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mnu_replace"
        android:title="@string/replace"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mnu_write"
        android:title="@string/write"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mnu_erase_bank"
        android:title="@string/erase"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mnu_edit"
        android:title="@string/edit_props"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mnu_view_hex"
        android:title="@string/view_hex"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mnu_backup"
        android:title="@string/amiibo_backup"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mnu_validate"
        android:title="@string/validate_data"
        app:showAsAction="ifRoom"/>
</menu>