<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mnu_scanner"
        android:title="@string/activate"
        android:icon="@drawable/ic_qr_code_scanner_24"
        app:showAsAction="always">
    <menu>
        <item
            android:id="@+id/mnu_camera"
            android:title="@string/camera"
            android:icon="@drawable/ic_camera_24"/>
        <item
            android:id="@+id/mnu_gallery"
            android:title="@string/gallery"
            android:icon="@drawable/ic_photo_24"/>
    </menu>
    </item>
    <item
        android:id="@+id/mnu_generate"
        android:title="@string/activate"
        android:icon="@drawable/ic_qr_code_24"
        app:showAsAction="always"/>
</menu>