<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="@drawable/card_foreground"
    app:cardCornerRadius="@dimen/card_radius"
    tools:ignore="SmallSp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageAmiibo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:foreground="@drawable/card_foreground"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="8dp"
            android:text="@string/amiibo_error_caps"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@color/tag_text_light"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amiibo_name_caps"
                android:textColor="@color/tag_text_light"
                android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/group1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtName"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTagId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/amiibo_id_caps"
                    android:textColor="@color/tag_text_light"
                    android:textSize="10sp"/>

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/txtAmiiboType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/amiibo_type_caps"
                    android:textColor="@color/tag_text_light"
                    android:textSize="10sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/group2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/group1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtGameSeries"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/amiibo_game_caps"
                    android:textColor="@color/tag_text_light"
                    android:textSize="10sp" />

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/txtAmiiboSeries"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/amiibo_series_caps"
                    android:textColor="@color/tag_text_light"
                    android:textSize="10sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/txtPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/group2"
                android:text="@string/amiibo_path_caps"
                android:textColor="@color/tag_text_light"
                android:textSize="10sp"
                android:singleLine="true"
                android:ellipsize="start"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtCharacter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/amiibo_character_caps"
        android:textColor="@color/tag_text_light"
        android:textSize="10sp"
        android:visibility="gone"/>
</androidx.cardview.widget.CardView>